[package]
name = "tree-sitter-wow-toc"
description = "Tree-sitter grammar for World of Warcraft .toc manifest files"
version = "0.1.0"
authors = ["Lekica <aleksa.cakic@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "wow-toc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = ""
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
